<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?customBackgroundColor"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/actionBar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="?customToolbarColor">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:gravity="center"
            android:text="@string/settings"
            android:textColor="?customDarkTextColor"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/imgBackButton"
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/back_button"
            android:src="?customBackButton" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <RadioGroup
            android:id="@+id/rgThemeSelection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp">

            <RadioButton
                android:id="@+id/rbLightTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="?customButtonColor"
                android:text="@string/light_theme"
                android:textColor="?customDarkTextColor"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/rbDarkTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:buttonTint="?customButtonColor"
                android:text="@string/dark_theme"
                android:textColor="?customDarkTextColor"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/rbSystemTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:buttonTint="?customButtonColor"
                android:text="@string/system_based"
                android:textColor="?customDarkTextColor"
                android:textSize="18sp" />

        </RadioGroup>

        <Button
            android:id="@+id/btnDone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="?customButtonColor"
            android:text="@string/done"
            android:textColor="?customDarkTextColor" />

    </RelativeLayout>


</LinearLayout>