<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?customBackgroundColor"
    tools:context=".activity.ShowLabelActivity">

    <RelativeLayout
        android:id="@+id/actionBar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="?customToolbarColor">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:gravity="center"
            android:text="@string/all_labels"
            android:textColor="?customDarkTextColor"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/imgBackButton"
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/back_button"
            android:src="?customBackButton" />

        <ImageView
            android:id="@+id/btnSettings"
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/settings_button"
            android:src="?customSettingsButton" />

    </RelativeLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvLanguageLabels"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.recyclerview.widget.RecyclerView>

</LinearLayout>